Fix white space issue via styling .pictures section as a column.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -224,10 +224,58 @@ footer img {
   }
 
 header, .container, .pictures, .mission-and-contact, .footer-title {
-  width: 100%; 
-}
+  width: 100%;
 }
 
+.pictures {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3.77rem;
+}
+
+.picture-item p {
+  font-size: 0.77rem;
+}
+
+.picture-item {
+  margin-top: 0.77rem;
+  margin-bottom: 0.77rem;
+}
+
+.mission-and-contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mission, .contact {
+  width: 100%
+}
+
+.mission-and-contact h2 {
+  width: 100%;
+}
+
+.mission-and-contact p {
+  font-size: 0.77rem;
+  margin-top: 1rem;
+  width: 90%;
+  margin-left: 2%; 
+}
+
+.mission {
+  margin-right: 0;
+}
+
+.contact {
+  margin-left: 0;
+  margin-top: 4rem;
+}
+
+}
+
+/* To display the main header for tablet size and above */
 @media only screen and (min-width:471px) {
   #mobile-header {
     display: none;
